--- a/src/nl/tudelft/main/resources/sample.fxml
+++ b/src/nl/tudelft/main/resources/sample.fxml
@@ -3,7 +3,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<GridPane fx:controller="SampleController"
+<GridPane fx:controller="controller.SampleController"
           xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10" minHeight="320" minWidth="400">
     <Button fx:id="dontPressButton" minWidth="25" text="Don't press me!" textAlignment="CENTER" />
 </GridPane>
