--- a/src/main/resources/startscreen.fxml
+++ b/src/main/resources/startscreen.fxml
@@ -1,38 +1,45 @@
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.*?>
 <?import java.net.URL?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<GridPane
-        fx:id="root"
+<?import javafx.scene.text.Text?>
+<AnchorPane fx:id="root"
         fx:controller="StartController"
-          xmlns:fx="http://javafx.com/fxml" style="-fx-background-color: black;" alignment="center" hgap="10" vgap="10" minHeight="1920" minWidth="1080">
+          xmlns:fx="http://javafx.com/fxml" style="-fx-background-color: black;" minHeight="1920" minWidth="1080">
 
-    <columnConstraints>
-        <ColumnConstraints percentWidth="50"/>
-    </columnConstraints>
-
-    <ImageView fx:id="imageView"
-            fitHeight="360"
-            fitWidth="640"
-            layoutX="61.0"
-            layoutY="83.0"
-            pickOnBounds="true"
-            preserveRatio="true"
-            GridPane.columnIndex="0"
-            GridPane.rowIndex="0">
-        <image>
+    <VBox alignment="CENTER"
+          AnchorPane.leftAnchor="0"
+          AnchorPane.rightAnchor="0"
+            AnchorPane.bottomAnchor="0"
+            AnchorPane.topAnchor="0">
+        <ImageView fx:id="imageView"
+                   fitHeight="360"
+                   fitWidth="640"
+                   layoutX="61.0"
+                   layoutY="83.0"
+                   pickOnBounds="true"
+                   preserveRatio="true"
+                >
             <Image url="BubbleBobbleLogo.png"/>
-        </image>
-    </ImageView>
-    <Button fx:id="startButton" styleClass="button" text="Start" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
-    <Button fx:id="helpButton" styleClass="button" text="Help" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
-    <Button fx:id="exitButton" styleClass="button" text="Exit" GridPane.columnIndex="0" GridPane.rowIndex="5"/>
+        </ImageView>
 
+        <Button fx:id="startButton" styleClass="button" text="Start" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
+        <Button fx:id="helpButton" styleClass="button" text="Help" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
+        <Button fx:id="exitButton" styleClass="button" text="Exit" GridPane.columnIndex="0" GridPane.rowIndex="5"/>
+    </VBox>
+
+    <GridPane fx:id="helpScreen" AnchorPane.leftAnchor="200"
+              AnchorPane.rightAnchor="200"
+              AnchorPane.topAnchor="200"
+              AnchorPane.bottomAnchor="200"
+            visible="false">
+        <Text text="Help Screen" GridPane.columnIndex="0"
+              GridPane.rowIndex="0"/>
+    </GridPane>
 
 
     <stylesheets>
         <URL value="@stylesheet.css"/>
     </stylesheets>
-</GridPane>
+</AnchorPane>
