--- a/src/nl/tudelft/main/resources/sample.fxml
+++ b/src/nl/tudelft/main/resources/sample.fxml
@@ -1,9 +1,13 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<GridPane fx:controller="controller.SampleController"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10" minHeight="320" minWidth="400">
-    <Button fx:id="dontPressButton" minWidth="25" text="Don't press me!" textAlignment="CENTER" />
-</GridPane>
+<?import javafx.scene.layout.Pane?>
+
+<Pane minHeight="430.0" minWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SampleController">
+   <children>
+       <Button fx:id="dontPressButton" minWidth="25" text="Don't press me!" textAlignment="CENTER" />
+   </children>
+</Pane>
