--- a/src/main/resources/stylesheet.css
+++ b/src/main/resources/stylesheet.css
@@ -30,11 +30,7 @@
 }
 
 .helpTitleText {
+	-fx-underline: true;
     -fx-font-size: 30px;
-    -fx-fill: white;
-}
-
-.helpText {
-    -fx-font-size: 20px;
     -fx-fill: white;
 }
