--- a/src/main/resources/stylesheet.css
+++ b/src/main/resources/stylesheet.css
@@ -31,11 +31,22 @@
 
 .helpTitleText {
 	-fx-underline: true;
+    -fx-font-size: 40px;
+    -fx-fill: white;
+}
+
+.helpTextDescription {
+	
     -fx-font-size: 30px;
     -fx-fill: white;
 }
 
 .helpText {
+    -fx-font-size: 30px;
+    -fx-fill: #0099FF;
+}
+
+.helpTextClick {
     -fx-font-size: 30px;
     -fx-fill: white;
 }
