--- a/src/main/resources/stylesheet.css
+++ b/src/main/resources/stylesheet.css
@@ -3,6 +3,7 @@
     -fx-background-color: black;
     -fx-min-height: 1000px;
     -fx-min-width: 1000px;
+    -fx-font-size: 40px;
 }
 
 .button {
@@ -24,6 +25,8 @@
     -fx-opacity: 0.99;
     -fx-min-width: 800;
     -fx-min-height: 600;
+    -fx-max-width: 1200;
+    -fx-max-height: 700;
     -fx-padding: 50;
     -fx-border-color: white;
     -fx-border-width: 15px;
