Added the game over screen.

--- a/src/main/resources/stylesheet.css
+++ b/src/main/resources/stylesheet.css
@@ -44,3 +44,9 @@
     -fx-fill: white;
     -fx-alignment: center;
 }
+
+.gameOver {
+	-fx-font-size: 70px;
+    -fx-fill: red;
+    -fx-alignment: center;
+}
