--- a/src/main/resources/level.fxml
+++ b/src/main/resources/level.fxml
@@ -1,10 +1,16 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 <?import java.net.URL?>
 <StackPane fx:id="root" fx:controller="controller.LevelController" xmlns:fx="http://javafx.com/fxml" visible="true">
     <Pane fx:id="playfieldLayer"/>
     <Text fx:id="startMessage" text="Click anywhere to start" styleClass="levelMessage"/>
+    
+    <VBox fx:id="pauseVBox" visible="false" styleClass="pauseVBox">
+        <Text fx:id="pauseMessage" text="Game paused" styleClass="levelMessage" visible="false"/>
+        <Text fx:id="pauseMessageSub" text="Press any key to continue" styleClass="levelMessageSub" visible="false"/>
+    </VBox>
 
     <stylesheets>
         <URL value="@stylesheet.css"/>
