Updated the font sizes and padding of the game over screen.

--- a/src/main/resources/stylesheet.css
+++ b/src/main/resources/stylesheet.css
@@ -62,11 +62,18 @@
 }
 
 
-.gameOver {
-	-fx-font-size: 70px;
+.gameOverText {
+	-fx-font-size: 60px;
     -fx-fill: red;
     -fx-alignment: center;
 }
+
+.gameOver {
+	-fx-font-size: 25px;
+    -fx-fill: white;
+    -fx-alignment: center;
+}
+
 
 #playfieldLayer {
     -fx-min-width: 832px;
