--- a/src/main/resources/gameOver.fxml
+++ b/src/main/resources/gameOver.fxml
@@ -12,10 +12,10 @@
 <?import javafx.scene.text.Text?>
 <?import java.net.URL?>
 
-<AnchorPane fx:id="root" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="controller.GameOverController">
+<AnchorPane fx:id="root" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.GameOverController">
    <children>
       
-         <GridPane fx:id="gameOverScreen" layoutX="200.0" layoutY="192.0" AnchorPane.bottomAnchor="175.0" AnchorPane.leftAnchor="175.0" AnchorPane.rightAnchor="175.0" AnchorPane.topAnchor="175.0">
+         <GridPane fx:id="gameOverScreen" layoutX="200.0" layoutY="192.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="100.0">
            <columnConstraints>
              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -26,10 +26,10 @@
              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
            </rowConstraints>
             <children>
-               <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="gameOver" text="Game Over" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-               <Button fx:id="restartButton" mnemonicParsing="false" text="Restart Game" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP" />
-               <Button fx:id="quitButton" mnemonicParsing="false" text="Quit" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP" />
-               <ImageView fx:id="gameOverView" fitHeight="344.0" fitWidth="525.0" pickOnBounds="true" preserveRatio="true" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+               <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="gameOverText" text="Game Over" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+               <Button fx:id="restartButton" mnemonicParsing="false" styleClass="gameOver" text="Restart Game" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP" />
+               <Button fx:id="quitButton" mnemonicParsing="false" styleClass="gameOver" text="Quit" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP" />
+               <ImageView fx:id="gameOverView" fitHeight="280.0" fitWidth="444.0" pickOnBounds="true" preserveRatio="true" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.valignment="BASELINE">
                   <image>
                      <Image url="@gameOverImage.png" />
                   </image>
