Ädded a win screen, which will later on appear when the game is won.

--- a/src/main/resources/stylesheet.css
+++ b/src/main/resources/stylesheet.css
@@ -72,6 +72,18 @@
     -fx-alignment: center;
 }
 
+.winText {
+	-fx-font-size: 60px;
+    -fx-fill: green;
+    -fx-alignment: center;
+}
+
+.win {
+	-fx-font-size: 25px;
+    -fx-fill: white;
+    -fx-alignment: center;
+}
+
 .levelMessageSub{
     -fx-font-size: 20px;
     -fx-fill: white;
