--- a/src/main/resources/level.fxml
+++ b/src/main/resources/level.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.text.Text?>
 <?import java.net.URL?>
 <StackPane fx:id="root" fx:controller="controller.MainController" xmlns:fx="http://javafx.com/fxml" visible="true">
-    <Pane fx:id="playfieldLayer"/>
+    <Pane fx:id="playFieldLayer"/>
     <Text fx:id="startMessage" text="Click anywhere to start" styleClass="levelMessage"/>
     
     <VBox fx:id="pauseVBox" visible="false" styleClass="pauseVBox">
