--- a/src/main/resources/startscreen.fxml
+++ b/src/main/resources/startscreen.fxml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import java.lang.*?>
-<?import java.net.*?>
-<?import javafx.scene.control.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
@@ -21,9 +18,10 @@
                  </image>
               </ImageView>
       
-              <Button fx:id="startButton" styleClass="button" text="Start" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-              <Button fx:id="helpButton" styleClass="button" text="Help" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-              <Button fx:id="exitButton" styleClass="button" text="Exit" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+              <Button fx:id="singlePlayerButton" styleClass="button" text="Start 1 Player" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+              <Button fx:id="multiPlayerButton" styleClass="button" text="Start 2 Players" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+              <Button fx:id="helpButton" styleClass="button" text="Help" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+              <Button fx:id="exitButton" styleClass="button" text="Exit" GridPane.columnIndex="0" GridPane.rowIndex="6" />
       </children>
        </VBox>
    
